--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.3",
     "debug": "~2.6.3",
+    "dotenv": "^4.0.0",
+    "env": "0.0.2",
     "express": "^4.15.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^7.4.1",
     "knex": "^0.13.0",
     "morgan": "~1.8.1",
     "pg": "^6.4.0",
